ajeitei o bug 11. dei um text align center e deixei width em 50%

--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -119,9 +119,10 @@ div:last-child {
 }
 
 table {
-    width: 80%;
+    width: 50%;
     margin: auto;
     font-family: 'Roboto', sans-serif ;
+    text-align: center;
 }
 
 
